components/atoms/FormComponents/PvSelect/PvSelect.scss
@import 'vue-select/src/scss/vue-select';

/* Default overwritings */
.vs {
  $root: &;

  &__actions {
    @apply tw-p-0;
  }

  &__selected-options {
    @apply tw-items-center;
    @apply tw-p-0;
    @apply tw-overflow-x-clip;
  }

  &__selected {
    @apply tw-m-0 tw-p-0;
    @apply tw-mr-2;
    @apply tw-flex tw-items-center;
    @apply tw-gap-2;
    @apply tw-text-pv-grey-16;
    @apply tw-hidden;
    @apply tw-w-full;

    &:first-of-type{
      @apply tw-mr-0;
      @apply tw-block;
      @apply tw-text-ellipsis;
      @apply tw-whitespace-nowrap;
      @apply tw-overflow-hidden;
    }
  }

  &__selected + .pv-select__search-wrapper {
    @apply tw-hidden;
  }

  &__deselect {
    @apply tw-hidden;
  }

  &__dropdown-toggle {
    @apply tw-flex tw-items-center tw-justify-between tw-gap-2;
    @apply tw-py-3 tw-pr-3 tw-pl-4;
    @apply tw-shadow-border-grey-80;
    @apply tw-border-0;
    @apply tw-rounded-md;
    @apply tw-bg-pv-white;
  }

  &__open-indicator {
    @apply tw-text-pv-grey-48;
  }

  &__search {
    &--multiple {
      @apply tw-absolute;
      @apply tw-w-full;
    }

    &,
    &:focus {
      @apply tw-p-0;
      @apply tw-m-0;
      @apply tw-w-full;
    }

    &::placeholder {
      @apply tw-text-pv-grey-64;
    }
  }

  &--searching {
    .vs__selected {
      @apply tw-hidden;
    }

    .vs__search + .pv-select__search-helper {
      @apply tw-block;
    }
  }

  &--single {
    &.vs--open .vs__selected {
      @apply tw-relative;
    }

    &.vs--searching {
      .vs__selected {
        @apply tw-block;
        @apply tw-opacity-0;
        @apply tw-invisible;
      }

      .pv-select__search-wrapper {
        @apply tw-absolute;
        @apply tw-w-full;
        @apply tw-top-0 tw-left-0;
      }
    }
  }

  &--multiple {
    #{$root}__selected {
      @apply tw-bg-pv-transparent;
      @apply tw-p-0;
      @apply tw-text-pv-grey-16;
      @apply tw-border-0;
    }

    #{$root}__search {
      @apply tw-caret-pv-transparent;
      @apply tw-cursor-pointer;
    }
  }

  &--searchable .vs__dropdown-toggle {
    @apply tw-cursor-pointer;
  }

  &__dropdown-menu {
    @apply tw-p-0;
    @apply tw-mt-1;
    @apply tw-border-solid;
    @apply tw-border-pv-grey-80;
    @apply tw-border-2;
    @apply tw-border-solid;
    @apply tw-rounded-md;
    @apply tw-max-h-48;
  }

  &__dropdown-option,
  &__no-options {
    @apply tw-py-3 tw-px-4;
    @apply tw-leading-6;
    @apply tw-flex tw-gap-2;
  }

  &__dropdown-option {
    @apply tw-whitespace-normal;

    &--highlight {
      @apply tw-bg-pv-red-lighter;
    }

    &--disabled {
      @apply tw-bg-pv-grey-96;
      @apply tw-text-pv-grey-48;
    }
  }

  &--open {
    .vs__dropdown-toggle {
      @apply tw-shadow-border-grey-16;
      @apply tw-rounded-md;
    }

    .vs__open-indicator {
      @apply tw-text-pv-grey-16;
    }
  }

  &--disabled {
    .vs__clear,
    .vs__search,
    .vs__selected,
    .vs__open-indicator {
      @apply tw-bg-pv-transparent;
    }

    .vs__selected {
      @apply tw-text-pv-grey-48;
    }

    .vs__dropdown-toggle {
      @apply tw-bg-pv-grey-96;
      @apply tw-border-pv-grey-80;
    }

    .vs__open-indicator {
      @apply tw-text-pv-grey-80;
    }
  }
}


/* Custom component class stylings */
.pv-select {
  &--icon {
    .vs__search {
      @apply tw-ml-8;
    }

    .vs__selected {
      @apply tw-order-1;
      margin-left: -10.5rem;
    }
  }

  &__icon {
    &-prepend {
      @apply tw-absolute;
    }

    &-error {
      @apply tw-text-pv-red;
      @apply tw-mr-2;
    }

    &-option {
      @apply tw-align-bottom;
    }
  }

  &--error {
    .vs__dropdown-toggle {
      @apply tw-shadow-border-red;
      @apply tw-rounded-b-none;
    }
  }

  &__search-wrapper {
    @apply tw-relative;
    @apply tw-overflow-x-clip;
  }

  &__search-helper {
    @apply tw-opacity-0;
    @apply tw-invisible;
    @apply tw-whitespace-nowrap;
  }
}

